<resources>
    <string name="app_name">Aahar Kendra</string>
    <string name="center_id">Center Id</string>
    <string name="login_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="login_pannel">Login Pannel</string>
    <string name="aahar_kendra">Aahar Kendra</string>
    <string name="welcome_to_aahar_kendra">Welcome to Aahar Kendra</string>
    <string name="center_head_dashboard_meal_entry">Meal Entry</string>
    <string name="center_head_dashboard_daily_meal_report">Daily Meal Report</string>
    <string name="center_head_dashboard_monthly_meal_report">Monthly Meal Report</string>

    <string-array name="designations">
        <item>- Choose Designation -</item>
        <item>Admin</item>
        <item>Center Head</item>
        <item>Nodal Officer</item>
    </string-array>
    <string name="title_activity_admin">AdminActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="center_head_title">Welcome to Center Head</string>
    <string name="center_head_title_fragment">Welcome to Center Head Dashboard Fragment</string>
    <string name="dashboard_menu">Dashboard</string>
    <string name="meal_details">Daily meal data entry</string>
    <string name="daily_meal_report">Daily meal report</string>
    <string name="monthly_meal_report">Monthly meal report</string>
    <string name="logout">Logout</string>

    <string name="center_head_meal_details">Welcome to Center Head Meal Details</string>
    <string name="center_head_dashboard">This is Center head dashboard</string>
    <string name="nodal_dashboard_menu">This is Nodal Officer dashboard</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="centerhead_dashboard">Dashboard</string>
    <string name="nodal_dashboard">Dashboard</string>
    <string name="centerhead_meal_details">Daily meal entry</string>
    <string name="nodal_daily_meal_details">Daily meal details</string>
    <string name="nodal_monthly_meal_details">Monthly meal details</string>
    <string name="centerhead_daily_meal_report">Daily meal report</string>
    <string name="centerhead_monthly_meal_report">Monthly meal report</string>
    <string name="meal_entry">Enter meal details </string>
    <string name="select_date">Click here to select date</string>
    <string name="meal_consumed">Meal Consumed</string>
    <string name="meal_left_over">Meal Left Over</string>
    <string name="send_data">Save Meal</string>
    <string name="night_meal">Night Meal</string>

    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="mode_of_meal">
        <item>Day Meal</item>
        <item>Night Meal</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show">Show</string>
    <string name="month">month</string>
    <string name="year">Year</string>

    <!-- Months -->
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!-- Years -->
    <string-array name="years">
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <!-- Add more years as needed -->
    </string-array>
</resources>