<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        tools:ignore="UselessParent">

        <!-- Day Meal Section -->
        <TextView
            android:id="@+id/dayMeal_datePicker"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/black_round_bg"
            android:gravity="center"
            android:text="@string/select_date"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Day Selector (Monday, Tuesday, etc.) -->
        <Spinner
            android:id="@+id/centerhead_dashboard_day_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_spinner"
            android:entries="@array/days"
            android:popupBackground="@color/white" />

        <!--        &lt;!&ndash; Mode of Meal Selector (Day or Night) &ndash;&gt;-->
        <!--        <Spinner-->
        <!--            android:id="@+id/modeOfMealSpinner"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="50dp"-->
        <!--            android:background="@drawable/bg_spinner"-->
        <!--            android:entries="@array/mode_of_meal"-->
        <!--            android:popupBackground="@color/white" />-->

        <!-- Meal Consumed EditText -->
        <EditText
            android:id="@+id/mealConsumedEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_bottom_black"
            android:hint="@string/meal_consumed"
            android:inputType="phone"
            android:textColor="@color/black" />

        <!-- Meal Left Over EditText -->
        <EditText
            android:id="@+id/mealLeftOverEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_bottom_black"
            android:hint="@string/meal_left_over"
            android:inputType="phone"
            android:textColor="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/centerhead_sendDayMealButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/send_data" />


</RelativeLayout>
